# Insight-Enterprise-Multi-Agent-RAG-Platform

./: .env.example  .gitignore  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT.md  DOCKER_CI_CD_SETUP.md  DOCKER_SETUP.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.sh
app/: main.py
app/agents/: arxiv_agent.py  citation_agent.py  classifier_agent.py  deep_research_agent.py  rerank_agent.py  search_agent.py  summarize_agent.py  workflow.py
app/chunking/: chunk.py
app/core/: circuit_breaker.py  config.py  llm.py  logging.py  security.py
app/data_ingestion/: ingest.py
app/embeddings/: embed.py
app/evaluation/: evaluator.py
app/governance/: audit.py
app/mcp/: mcp_server.py  register_tools.py
app/memory/: long_term.py  short_term.py
app/registry/: agent_registry.py  register_agents.py
app/routes/: research.py
app/services/: arxiv.py  rag_pipeline.py  scraper.py  semantic_scholar.py
app/supervisor/: supervisor.py
app/utils/: pdf.py
app/vector_db/: croma_db.py
chroma_db/: chroma.sqlite3
data/audit_logs/: audit.jsonl
data/evaluations/: evaluations.jsonl
data/long_term_memory/: anonymous.json
