[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=2.4.1",
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "reportlab>=4.4.10",
    "scrapy>=2.14.2",
    "sentence-transformers>=5.3.0",
    "textloader>=0.0.9",
]
